--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "test_project",
-    "short_name": "test_project",
+    "name": "testweb",
+    "short_name": "testweb",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
